...

                <!-- REFRESH BUTTON -->

                <!-- CONNECTED STATUS -->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/refreshCalendar"
                    android:layout_width="167dp"
                    android:layout_height="59dp"
                    android:backgroundTint="#7A1C1C"
                    android:padding="12dp"
                    android:text=""
                    app:icon="@drawable/ic_refresh_calendar"
...
                    android:textColor="#777"
                    android:textSize="12sp" />

                <!-- CALENDAR ITEM -->

                <LinearLayout
                    android:id="@+id/calendarListContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"/>


...
